Avoid to use global packages

--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "repository": "https://github.com/Lcfvs/anticore-default-project",
   "main": "./assets/dev/index.js",
   "scripts": {
-    "build": "webpack --mode production ./assets/js/dev/index.js --output ./assets/js/dist/app.min.js",
-    "dev": "webpack --mode dev ./assets/js/dev/index.js --output ./assets/js/dist/app.min.js",
-    "preinstall": "npm i -g webpack webpack-cli",
-    "postinstall": "npm run build",
+  "scripts": {
+    "build": "node_modules/.bin/webpack-cli --mode production ./assets/js/dev/index.js --output ./assets/js/dist/app.min.js",
+    "dev": "node_modules/.bin/webpack-cli --mode dev ./assets/js/dev/index.js --output ./assets/js/dist/app.min.js",
+    "postinstall": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "lcf.vs <michael.rouges@gmail.com>",
   "license": "UNLICENSED",
-  "dependencies": {},
   "devDependencies": {
-    "anticore": "^2.21.2"
+    "anticore": "^2.5.0",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1"
   }
 }
